hello-world-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-nginx-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-world-nginx
    spec:
      containers:
      - name: hello-world-nginx
        image: gcr.io/$GOOGLE_CLOUD_PROJECT/hello-world-nginx:latest
